--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>Sayonara Zetsubou Sensei - GALAX</title>
   </head>
-  <body>
+  <body class="bg-gray-900 text-gray-100 min-h-[calc(100vh-350px)]">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
